# bruggen-database

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  CITATION.cff  DECISIONS.md  README.md  pixi.toml  plan.md
.github/workflows/: pages.yml  pre-commit.yml  refresh.yml  tests.yaml
config/: bridges.yml  countries.yml
data/processed/: LICENSE.md  bridges_NL.csv  bridges_NL.geojson  bridges_NL.gold.geojson  bridges_NL.kml  bridges_NL_viewer.html  rest_stops_playgrounds_DE.csv  rest_stops_playgrounds_DE.geojson  rest_stops_playgrounds_DE.gold.geojson  rest_stops_playgrounds_DE.kml  run_metadata_AT.json  run_metadata_BE.json  run_metadata_IT.json  run_metadata_bridges_NL.json
src/: README.md  pyproject.toml
src/bridges/: __init__.py  config.py  export.py  extract.py  group.py  osm.py  pipeline.py  query.py  schema.py  validate.py  viewer.py
src/restspots/: overpass.py  pbf.py  pipeline.py  schema.py  validate.py
test/: test_bridges.py  test_overpass.py  test_schema.py
