[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "bridges/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["bridges"]

[project]
name = "bridges"
version = "0.0.1"
description = "Build a database of bridges (Netherlands) with their properties from OpenStreetMap, and export for Google Maps / GIS"
readme = "README.md"
license = {text = "GNU-GPL V3"}
authors = [
  { name = "David Haasnoot"},
]

dependencies = [
  "geopandas",
  "shapely",
  "pyproj",
  "pandas",
  "requests",
  "pyyaml",
  "simplekml",
  "osm2geojson",
  "osmium",
  "pydantic",
]

[project.scripts]
bridges = "bridges.pipeline:main"

[project.urls]
Source = "https://github.com/HKV-products-services/bruggen-database"
